--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 <body class="regular-navigation">
     <div id="master-wrapper">
         <!--header macro-->
-        {{PreLoader()}}
+        <!--{{PreLoader()}}-->
 
         {{Header()}}
         <!--header macro ends-->
