--- a/templates/former-years.html
+++ b/templates/former-years.html
@@ -1,8 +1,9 @@
+
 {%extends 'base.html'%}
 {%from 'macros.html' import Header,BackToTop,PreLoader,Footer,BigPicture %}
 
 {% block content%}
-    {{BigPicture('news in a grid format','subtitle')}}
+    {{BigPicture('往年盛况','宝剑锋从磨砺出，梅花香自苦寒来')}}
     <!--grid format-->
     <section id="our-courses1">
             <div class="section-inner">
