--- a/templates/single-post.html
+++ b/templates/single-post.html
@@ -9,12 +9,12 @@
             <div class="dark-overlay single-page-hero">
                 <div class="container single-page-hero">
                     <div class="vertical-center-js text-center">
-                        <h1>An Example Single Post</h1>
+                        <h1>xx课程</h1>
                         <div class="item-metas text-muted mb30 white">
-                            <span class="meta-item"><i class="pe-icon pe-7s-folder"></i> POSTED IN <span class="secondary-font">News</span></span>
-                            <span class="meta-item"><i class="pe-icon pe-7s-ticket"></i> TAGS <span class="secondary-font">Photography</span></span>
-                            <span class="meta-item"><i class="pe-icon pe-7s-user"></i> AUTHOR <span class="secondary-font">Danny Jones</span></span>
-                            <span class="meta-item"><i class="pe-icon pe-7s-comment"></i> COMMENTS <span class="secondary-font">3</span></span>
+                            <span class="meta-item"><i class="pe-icon pe-7s-ticket"></i> TAGS <span class="secondary-font">提分快</span></span>
+                            <span class="meta-item"><i class="pe-icon pe-7s-ticket"></i> TAGS <span class="secondary-font">师资强</span></span>
+                            <span class="meta-item"><i class="pe-icon pe-7s-ticket"></i> TAGS <span class="secondary-font">效率高</span></span>
+                            <span class="meta-item"><i class="pe-icon pe-7s-comment"></i> 评论 <span class="secondary-font">3</span></span>
                         </div>
                     </div>
                 </div>
@@ -35,11 +35,11 @@
 
                             <div id="comments-list" class="wow fadeIn" data-wow-delay="0.2s">
                                 <div class="mt60 mb50 single-section-title">
-                                    <h3>3 Comments</h3>
+                                    <h3>3条评论</h3>
                                 </div>
                                 <div class="media">
                                     <div class="pull-left">
-                                        <img class="avatar comment-avatar" src="http://lorempixel.com/g/80/80/people/9" alt="">
+                                        <img class="avatar comment-avatar" src="https://cn.bing.com/th?id=OIP.e_ccrSA9MUMsy-lU7B53GAAAAA&pid=Api&rs=1" alt="" style="width:100px;height:100px;">
                                     </div>
                                     <div class="media-body">
                                         <div class="well">
@@ -47,11 +47,10 @@
                                                 <span class="heading-font">Dave Evans</span>&nbsp; <small>30th Jan, 2015</small>
                                             </div>
                                             <p>Was are delightful solicitude discovered collecting man day. Resolving neglected sir tolerably but existence conveying for. Day his put off unaffected literature partiality inhabiting.</p>
-                                            <a class="btn btn-primary pull-right mt30" href="#">Reply</a>
                                         </div>
                                         <div class="media">
                                             <div class="pull-left">
-                                                <img class="avatar comment-avatar" src="http://lorempixel.com/g/80/80/people/5" alt="">
+                                                <img class="avatar comment-avatar" src="https://cn.bing.com/th?id=OIP.bn5cBnqWnE8JPfzEjvcIoQAAAA&pid=Api&rs=1" style="width:100px;height:100px;" alt="">
                                             </div>
                                             <div class="media-body">
                                                 <div class="well">
@@ -59,15 +58,14 @@
                                                         <span class="heading-font">Dave Evans</span>&nbsp; <small>30th Jan, 2015</small>
                                                     </div>
                                                     <p>Wicket longer admire do barton vanity itself do in it. Preferred to sportsmen it engrossed listening. Park gate sell they west hard for the. Abode stuff noisy manor blush yet the far. Up colonel so between removed so do.</p>
-                                                    <a class="btn btn-primary pull-right mt30" href="#">Reply</a>
                                                 </div>
                                             </div>
-                                        </div><!--/.media-->
+                                        </div>
                                     </div>
-                                </div><!--/.media-->
+                                </div>
                                 <div class="media">
                                     <div class="pull-left">
-                                        <img class="avatar comment-avatar" src="http://lorempixel.com/g/80/80/people/6" alt="">
+                                        <img class="avatar comment-avatar" src="https://cn.bing.com/th?id=OIP.bn5cBnqWnE8JPfzEjvcIoQAAAA&pid=Api&rs=1" alt="" style="width:100px;height:100px;">
                                     </div>
                                     <div class="media-body">
                                         <div class="well">
@@ -75,26 +73,11 @@
                                                 <span class="heading-font">Dave Evans</span>&nbsp; <small>30th Jan, 2015</small>
                                             </div>
                                             <p>Quitting informed concerns can men now. Projection to or up conviction uncommonly delightful continuing. In appetite ecstatic opinions hastened by handsome admitted.</p>
-                                            <a class="btn btn-primary pull-right mt30" href="#">Reply</a>
                                         </div>
                                     </div>
                                 </div><!--/.media-->
 
-                                <div id="comments-form" class="row wow fadeIn" data-wow-delay="0.2s">
-                                    <div class="col-md-12">
-                                        <div class="mt60 mb50 single-section-title">
-                                            <h3>Leave A Reply</h3>
-                                        </div>
-                                        <div id="message"></div>
-                                        <form method="post" id="commentform" class="comment-form">
-                                            <input type="text" class="form-control col-md-4 mb20" name="name" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name." />
-                                            <input type="text" class="form-control col-md-4 mb20" name="email" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address." />
-                                            <input type="text" class="form-control col-md-4 mb20" name="website" placeholder="Your URL *" id="website" required data-validation-required-message="Please enter your web address." />
-                                            <textarea name="comments" class="form-control mb40" id="comments" placeholder="Your Message *" required data-validation-required-message="Please enter a message."></textarea>
-                                            <a class="btn btn-primary pull-right mt30" href="#">Reply</a>
-                                        </form>
-                                    </div>
-                                </div>
+
                             </div>
                         </div>
 
@@ -119,7 +102,7 @@
                                             <img alt="" class="img-responsive" src="../static/images/blog-5.jpg">
                                         </a>
                                         <a class="thumb" href="#">
-                                            <img alt="" class="img-respons<img alt="" class="img-responsive" src="../static/images/blog-5.jpg">
+                                            <img alt="" class="img-responsive" src="../static/images/blog-5.jpg">
                                         </a>
                                     </div>
                                 </div>
@@ -181,18 +164,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="mailing-widget widget">
-                                <h4 class="widget-title mb40">Mailing List</h4>
-                                <div class="content-wiget">
-                                    <p class="mb40">Subscribe to our newsletter for the latest updates and offers.</p>
-                                    <form action="index.html">
-                                        <div class="input-group">
-                                            <input class="form-control form-email-widget" placeholder="Email address" type="text"><span class="input-group-btn"><input class="btn btn-email" type="submit" value="✓"></span>
-                                        </div>
-                                    </form>
-                                    <p></p>
                                 </div>
                             </div>
                         </div>
