--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 
 
 {% block content%}
+    <!--header begins-->
     <header id="home" class="backstretched fullheight max-600">
         <div class="dark-overlay fullheight max-600">
             <div class="container fullheight max-600">
@@ -10,79 +11,91 @@
                     <h1><small>我们提供</small><br>
                         最优质的的教学资源</h1>
                     <p>
-                        <a class="btn btn-white btn-lg page-scroll" href="#about-us" role="button">Why?</a>
-                        <a class="btn btn-lg btn-primary btn-green page-scroll" href="#our-team" role="button">Browse
-                            Courses</a>
+                        <a class="btn btn-white btn-lg page-scroll" href="#about-us" role="button">关于星插本</a>
+                        <a class="btn btn-lg btn-primary btn-green page-scroll" href="#our-team" role="button">团队亮点</a>
                     </p>
                 </div>
             </div>
         </div>
     </header>
+    <!--header begins-->
 
     <section id="about-us">
-        <div class="section-inner">
+        <div class="section-inner" style="padding-bottom: 40px; padding-bottom: 40px;">
             <div class="container">
                 <div class="row mb60 text-center">
                     <div class="col-sm-12">
-                        <h3 class="section-title">About Us</h3>
-                        <p class="section-sub-title">Who are we?</p>
+                        <h3 class="section-title">我们是谁, 实力在那？</h3>
+                        <!--p class="section-sub-title">源自泮梦，走向未来</!--p>-->
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-3">
-                        <p class="lead">Completely enhance an expanded array of internal or "organic" sources for
-                            prospective models.</p>
-                        <p class="mb40">Assertively envisioneer business opportunities before interoperable e-markets.
-                            Quickly empower optimal core competencies and real-time imperatives. Enthusiastically
-                            predominate 24/365 benefits with collaborative web-readiness, assertively envisioneer business
-                            opportunities e-markets.</p>
-                        <a class="btn btn-lg btn-primary btn-green page-scroll" href="#our-team" role="button">Browse
-                            Courses</a>
+                        <p class="lead">源自泮梦，走向未来</p>
+                        <p class="mb40">
+                            星插本源于2014年“广州大学泮梦文化教育”<br>
+                            联合历届成功插本的师兄师姐成立<br>
+                            2018年改名为“星插本”<br>
+                            成为广东省首家O2O专插本“互联网+”教育机构<br>
+                            广东专插本专业课首选辅导中心<br>
+                            优秀的师资与人性化的服务正是我们给许多同学的第一印象<br>
+                            线上线下双通道培训制，完备的答疑机制，来了就踏踏实实学习，你的成绩将是你最好的回报。
+                            <br>
+                            
+                            <img style="height: 350px; width: 250px; border: black solid 1px ;" src="https://cn.bing.com/th?id=OIP.2f0cQIG65kTuR6RTJDElVwHaKe&pid=Api&rs=1"/>
+                        </p>
+                        <a class="btn btn-lg btn-primary btn-green page-scroll" href="#our-team" role="button">关于团队</a>
                     </div>
                     <div class="col-md-8 col-md-offset-1">
                         <div class="row">
                             <div class="col-sm-6 wow fadeIn mb40">
                                 <div class="icon-box-1 match-height mb30">
-                                    <i class="fa-4x pe-7s-camera"></i>
+                                    <!--to check how many else icon you can use, http://themes-pixeden.com/font-demos/7-stroke/-->
+                                    <i class="fa-4x pe-7s-like2"></i>
                                     <div class="content-area">
-                                        <h3 class="title">Web Design Training</h3>
-                                        <div class="content">Enthusiastically seize bricks-and-clicks supply chains without
-                                            open-source solutions. Objectively harness cross-media results for performance
-                                            based.
+                                        <h3 class="title">经验丰富</h3>
+                                        <div class="content">深耕专业课领域  全力服务考生<br>
+                                            至今培训考生达1500人以上<br>
+                                            辅导专业课过线率达75%以上                                            
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 wow fadeIn mb40">
                                 <div class="icon-box-1 match-height mb30">
-                                    <i class="fa-4x pe-7s-piggy"></i>
+                                    <i class="fa-4x pe-7s-diamond"></i>
                                     <div class="content-area">
-                                        <h3 class="title">Finance Degree</h3>
-                                        <div class="content">Goodbye gray sky hello blue. There's nothing can hold me when I
-                                            hold you. Feels so right it cant be wrong. Seamlessly underwhelm
-                                            enterprise-wide.
+                                        <h3 class="title">优秀师资</h3>
+                                        <div class="content">
+                                            定向邀请插本院校相关专业的对应老师授课<br>
+                                            星插本专业教研团队负责制作配套资料
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 wow fadeIn">
                                 <div class="icon-box-1 match-height mb30">
-                                    <i class="fa-4x pe-7s-joy"></i>
+                                    <i class="fa-4x pe-7s-star"></i>
                                     <div class="content-area">
-                                        <h3 class="title">Video Game Development</h3>
-                                        <div class="content">Goodbye gray sky hello blue. There's nothing can hold me when I
-                                            hold you. Feels so right it cant be wrong.
+                                        <h3 class="title">混合模式授课</h3>
+                                        <div class="content">
+                                            线上直播与面授<br>
+                                            按照学习的规律性<br>
+                                            星插本采用3天制混合模式授课<br>
+                                            最高效地为同学们提升考试能力
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 wow fadeIn">
                                 <div class="icon-box-1 match-height mb30">
-                                    <i class="fa-4x pe-7s-micro"></i>
+                                    <i class="fa-4x pe-7s-cup"></i>
                                     <div class="content-area">
-                                        <h3 class="title">Audio Engineering</h3>
-                                        <div class="content">Goodbye gray sky hello blue. There's nothing can hold me when I
-                                            hold you. Feels so right it cant be wrong.
+                                        <h3 class="title">贴心跟踪辅导</h3>
+                                        <div class="content">
+                                            专业且及时的题目答疑<br>
+                                            成功插本师兄师姐的陪伴<br>
+                                            无微不至的关怀
                                         </div>
                                     </div>
                                 </div>
@@ -94,19 +107,19 @@
         </div>
     </section>
     <section id="band-member-1" class="hover-shift smoothie match-height" data-mh="page-splitter">
-        <div class="container">
+        <div class="container" style="padding-right: 10px;">
             <div class="row">
                 <div class="col-sm-4 col-sm-offset-8 col-xs-12 dark-overlay fill-right smoothie match-height"
                      data-mh="page-splitter">
                     <div class="section-inner">
-                        <div class="row">
-                            <div class="col-md-offset-1 col-md-10">
-                                <h3>Why choose Scholar?</h3>
-                                <h5 class="section-sub-title mb40">Let us explain.</h5>
+                        <div class="row" style="margin-right:-52px;">
+                            <div class="col-md-offset-1 col-md-10" style="text-align:right;padding-right:0px;">
+                                <h3>疯 <br>狂 <br>刷 <br>题 <br></h3>
+                                <!--<h5 class="section-sub-title mb40">Let us explain.</h5>
                                 <p class="mb40">Holisticly orchestrate superior total linkage rather than end-to-end
                                     internal or "organic" sources. Seamlessly procrastinate client-based ROI without
-                                    long-term high-impact.</p>
-                                <a href="#" class="btn btn-primary btn-green btn-lg">Browse Courses</a>
+                                    long-term high-impact.</p>-->
+                                <a href="{{url_for('mini_program')}}" class="btn btn-primary btn-green btn-lg">小<br>程<br>序<br>详<br>情</a>
                             </div>
                         </div>
                     </div>
@@ -524,7 +537,7 @@
 
     <div class="tlinks">Collect from <a href="#">infoinfo</a></div>
 
-    <section id="band-member-2" class="hover-shift smoothie match-height" data-mh="page-splitter">
+    <!-- <section id="band-member-2" class="hover-shift smoothie match-height" data-mh="page-splitter">
         <div class="container match-height" data-mh="page-splitter">
             <div class="row">
                 <div class="col-md-4 dark-overlay fill-left smoothie">
@@ -542,15 +555,15 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section id="our-team">
+    <section id="our-team" style="background-color: #699;">
         <div class="section-inner">
             <div class="container">
                 <div class="row mb60 text-center">
-                    <div class="col-sm-12">
-                        <h3 class="section-title">Meet The Team</h3>
-                        <p class="section-sub-title">The very best in their fields.</p>
+                    <div class="col-sm-12" style="color: blanchedalmond;">
+                        <h3 class="section-title">团队亮点</h3>
+                        <p class="section-sub-title">这一切，报名星插本即可拥有</p>
                     </div>
                 </div>
 
@@ -921,19 +934,23 @@
         </div>
     </section>
     <section>
-        <div class="section-inner">
+        <div class="section-inner" style="padding-top:60px; padding-bottom:60px;">
             <div class="container">
                 <div class="row mb60 text-center">
                     <div class="col-sm-12">
-                        <h3 class="section-title">合作伙伴</h3>
+                        <h3 class="section-title">合作伙伴&合作院校</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-10 col-sm-offset-1">
                         <div class="row">
-                            {%for path in paths%}
-                                <div class="col-md-3"><img class="img-responsive" src="{{path}}" alt=""></div>
+                            {%for name in path_and_name%}
+                                <div class="col-md-3">
+                                    <img class="img-responsive" src="{{path_and_name.get(name)}}" style="margin:10%; height:40%; width:40%;">
+                                    <span>{{name}}</span>
+                                </div>
                             {%endfor%}
+                        </div>
                     </div>
                 </div>
             </div>
