--- a/templates/single-course.html
+++ b/templates/single-course.html
@@ -11,8 +11,11 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8">
+                            <!--<video controls width="900px" height="500px">
+                                    <source src="https://www.bilibili.com/video/av67457647?p=1" type="video/mp4">
+                            </video>-->
                             <div class="frame-wrapper mb40">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/C3jA2UB-O3g" frameborder="0" allowfullscreen></iframe>
+                                <iframe src="//player.bilibili.com/player.html?aid=67457647&cid=116963870&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" height="500px" width="900px"> </iframe>
                             </div>
                    			<p class="lead">Completely enhance an expanded array of internal or "organic" sources for prospective models. Collaboratively unleash installed base strategic theme areas with accurate partnerships. Credibly disintermediate unique content through fully.</p>
                             <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
